<resources>
    <string name="app_name">Views</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_button">activity_button</string>
    <string name="clickHere">Click here</string>
    <string name="writeHere">Write Here</string>
    <string name="yourPassword">Your password</string>
    <string name="enterPassword">Enter Password</string>
    <string name="iphone">iPhone</string>
    <string name="android">Android</string>
    <string name="winMobile">Windows Mobile</string>
    <string name="display">Display</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="toggle_on">Turn on</string>
    <string name="toggle_off">Turn off</string>
    <string name="rateMe">Rate Me</string>
    <string name="submit">Submit</string>
    <string name="result">Result : </string>
    <string name="changeDate">Change Date</string>
    <string name="currentDay">Current Date (M-D-YYYY) : </string>
    <string name="changeTime">Change Time</string>
    <string name="currentTime">Current Time (H:M) : </string>
    <string name="analog">Analog Clock</string>
    <string name="digital">Digital Clock</string>
    <string name="title_activity_textbox">activity_textbox</string>
    <string name="title_activity_password">activity_password</string>
    <string name="title_activity_checkbox">activity_checkbox</string>
    <string name="title_activity_radiobutton">activity_radiobutton</string>
    <string name="title_activity_toggle">activity_toggle</string>
    <string name="title_activity_ratingbar">activity_ratingbar</string>
    <string name="title_activity_datepicker">activity_datepicker</string>
    <string name="title_activity_timepicker">activity_timepicker</string>
    <string name="title_activity_clock">activity_clock</string>
</resources>
