<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">


    <ToggleButton
        android:id="@+id/toggle_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ToggleButton" />

    <ToggleButton
        android:id="@+id/toggle_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/toggle_on"
        android:textOff="@string/toggle_off"
        android:checked="true"/>

    <Button
        android:id="@+id/btn_Display_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display" />

</LinearLayout>
