<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity_password"
    tools:showIn="@layout/activity_password">

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterPassword"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/yourPassword"
        android:inputType="textPassword"
        android:textSize="22sp">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnClickHere_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clickHere"
        android:textSize="18sp" />

</LinearLayout>